test/cases/hello_world_with_updates.1.zig
pub export fn main() noreturn {}

// error
//
// :1:22: error: function declared 'noreturn' implicitly returns
// :1:32: note: control flow reaches end of body here
